--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Allison&family=Almendra:ital,wght@0,400;0,700;1,400;1,700&family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+/*ANIMATIONS*/
+.link-animated:hover {
+  animation-name: link-hover;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@keyframes link-hover {
+  30% {
+    transform: translate(0.1rem, -0.1rem); }
+  100% {
+    text-shadow: 1px 1px 7px rgba(21, 221, 149, 0.7);
+    transform: translate(0.1rem, -0.1rem); } }
+/*NORMALIZE*/
+*, *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; }
+  
+  /*GLOBALS*/
+  html {
+    font-size: 10px;
+    font-family: 'Bai Jamjuree', sans-serif;
+    user-select: none; }
+  
+  body {
+    background-color: gray;
+    background-image: url("./images/background.webp");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed; }
+  
+  a {
+    text-decoration: none; }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  *:focus{
+
+    outline: none;
+    box-shadow: 0 0 5px 1px rgba(21, 221, 149, 0.7);
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  @media screen and (max-width:1200px) {
+    
+    html{
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+      font-size: 8px;
+    }
   }
-  to {
-    transform: rotate(360deg);
+  @media screen and (max-width:480px) {
+    
+    html{
+
+      font-size: 6px;
+    }
   }
-}
+  
