--- a/src/components/Main/MisTrabajos/MisTrabajos.css
+++ b/src/components/Main/MisTrabajos/MisTrabajos.css
@@ -16,7 +16,22 @@
 }
 .trabajos__list{
 
-    background-color: red;
-    height: 40rem;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+@media screen and (max-width:768px) {
+    
+    .trabajos__list{
+
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media screen and (max-width:480px) {
+    
+    .trabajos__list{
+
+        display: flex;
+        flex-direction: column;
+    }
 }
