--- a/src/components/Main/MisTrabajos/Trabajo/Trabajo.css
+++ b/src/components/Main/MisTrabajos/Trabajo/Trabajo.css
@@ -1,13 +1,70 @@
 .trabajos__list__trabajo{
 
-    background-color: rgb(52, 109, 90);
     flex: 1;
     overflow: hidden;
 }
 .trabajos__list__trabajo__figure{
 
-    height: 100%;
+    height: 40rem;
     width: 100%;
     background-position: center;
     background-size: cover;
+    transition: filter .7s;
+}
+.trabajos__list__trabajo:hover>.trabajos__list__trabajo__figure{
+
+    filter: blur(3px);
+}
+   
+.trabajos__list__trabajo__info{
+
+    position: absolute;
+    background-color: rgba(21,21,21,.95);
+    top: 100%;
+    left: 0;
+    right: 0;
+    height: 100%;
+    
+    padding: 4rem;
+    transition: top .7s ease-in-out;
+}
+
+.trabajos__list__trabajo:hover>.trabajos__list__trabajo__info{
+
+    top: 0;
+    transition-delay: .2s;
+}
+
+.trabajos__list__trabajo__info__title{
+
+    color: rgb(48, 48, 48);
+    transition: color .2s ease-in-out,text-shadow .2s ease-in-out;
+    font-size: 3rem;
+}
+.trabajos__list__trabajo:hover .trabajos__list__trabajo__info__title{
+
+    color: rgb(202, 255, 236);
+    text-shadow: 1px 1px 2px rgba(21, 221, 149, 0.5),
+                 -1px 1px 2px rgba(21, 221, 149, 0.5),
+                 -1px -1px 2px rgba(21, 221, 149, 0.5),
+                 1px -1px 2px rgba(21, 221, 149, 0.5);
+    transition: color 1s .9s ease-in-out,text-shadow 1s .9s ease-in-out;
+}
+
+.trabajos__list__trabajo__info__description{
+
+    padding-top: 4rem;
+
+    color: rgb(48, 48, 48);
+    transition: color .2s ease-in-out,text-shadow .2s ease-in-out;
+    font-size: 1.8rem;
+}
+.trabajos__list__trabajo:hover .trabajos__list__trabajo__info__description{
+
+    color: rgb(224, 213, 253);
+    text-shadow: 1px 1px 2px rgba(139, 100, 250, 0.3),
+                 -1px 1px 2px rgba(139, 100, 250, 0.3),
+                 -1px -1px 2px rgba(139, 100, 250, 0.3),
+                 1px -1px 2px rgba(139, 100, 250, 0.3);
+    transition: color 1s .9s ease-in-out,text-shadow 1s .9s ease-in-out;
 }
