--- a/src/components/Main/SobreMi/Certificados/Certificado/Certificado.css
+++ b/src/components/Main/SobreMi/Certificados/Certificado/Certificado.css
@@ -3,7 +3,18 @@
     background-color: #202020;
     border: 2px solid #3c3c3c;
     padding: 2rem;
-    margin: 2rem 0; }
+    cursor: pointer;
+    margin: 2rem 0; 
+    text-decoration: none;
+    color: #f5f5f5;
+    transition: border-color .2s, box-shadow .2s;
+}
+.sobre-mi__certificates__card:hover {
+    
+    box-shadow: 0px 0px 9px 2px rgba(21, 221, 149, 0.7),
+                inset 0px 0px 9px 2px rgba(21, 221, 149, 0.7);
+    border-color: rgb(21, 221, 149);
+}
     .sobre-mi__certificates__card__title {
     font-size: 2rem;
     text-shadow: 2px 2px 3px rgba(21, 221, 149, 0.7);
@@ -23,4 +34,11 @@
 
         min-width: 30rem;
         margin: 2rem ; }
+}
+@media screen and (max-width:480px) {
+
+    .sobre-mi__certificates__card {
+
+        width: 40rem;
+    }
 }
