--- a/src/components/Main/SobreMi/SobreMi.css
+++ b/src/components/Main/SobreMi/SobreMi.css
@@ -1,8 +1,8 @@
 .sobre-mi {
     min-height: 100vh;
     color: #f5f5f5;
-    margin: auto;
-    margin-left: 7rem;
+    padding-top: 8rem;
+    padding-left: 7rem;
     display: grid;
     grid-template-columns: 1fr 40rem;
     grid-template-rows: auto 1fr 45rem; }
@@ -11,7 +11,7 @@
   font-size: 6rem;
   text-shadow: 6px 6px 7px rgba(21, 221, 149, 0.7);
   font-weight: 500;
-  margin: 8rem 0; }
+  margin-bottom: 8rem; }
 .sobre-mi__text {
   grid-area: 2/1/3/2;
   font-size: 2.3rem;
@@ -25,5 +25,6 @@
     padding: 8rem 7rem;
     display: flex;
     flex-direction: column;
+    gap: 5rem;
   }
 }
