--- a/src/components/Toolbar/Hamburguesa/Hamburguesa.css
+++ b/src/components/Toolbar/Hamburguesa/Hamburguesa.css
@@ -35,7 +35,7 @@
         width: 100%;
         height: 10.5rem;
         border-bottom: .5rem solid #2f3333;
-
+        animation: hamburguesa-item--expanded .3s linear 1;
     }
     .header__hamburguesa--shrink{
         
@@ -55,7 +55,7 @@
         width: 3rem;
         height: 3rem;
         transform: rotate(45deg);
-        animation: hamburguesa-back__fade .3s ease-in-out 1 reverse backwards;
+        animation: hamburguesa-back__fade .3s ease-in-out 1 .3s reverse backwards;
         
     }
     .header__hamburguesa__line{
@@ -148,5 +148,16 @@
 
         transform: rotate(45deg) translate(-3rem,3rem);
         opacity: 0;
+    }
+}
+@keyframes hamburguesa-item--expanded {
+    
+    0%{
+        transform-origin: 0;
+        transform: scaleX(0);
+    }
+    100%{
+        transform-origin: 0;
+        transform: scaleX(1);        
     }
 }
