--- a/src/components/Toolbar/Redes/Redes.css
+++ b/src/components/Toolbar/Redes/Redes.css
@@ -10,6 +10,10 @@
 .nav-bar__redes__link{
 
     padding: 1.3rem;
+    text-align: center;
+    color: #878787;
+    font-weight: 500; 
+    
 }
 .nav-bar__redes__link__img{
 
@@ -38,5 +42,29 @@
 
         display: none;
     }
+    .nav-bar__redes--expanded{
+
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        padding-left: 3rem;
+        width: 100%;
+        border-bottom: .5rem solid #2f3333;
+        animation: hamburguesa-item--expanded .3s linear 1;
+    }
+    .nav-bar__redes__link{
+    
+        padding: 2rem 1rem;
+        font-size: 3rem;
+        animation: toolbar-link-render .3s linear 1 forwards;
+        opacity: 0;
+        display: flex;
+        gap: 3rem;
+    }
+    .nav-bar__redes__link__img{
+    
+        width: 4rem; 
+    }
 
 }
+
